--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dalisra-mongo-wrapper",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Simple mongodb wrapper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit",
+    "coverage": "nyc --reporter=html mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,12 @@
   "homepage": "https://github.com/Dalisra/mongo-wrapper#readme",
   "dependencies": {
     "async": "^2.6.0",
-    "mongodb": "^2.2.33"
+    "mongodb": "^3.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "nyc": "^11.4.1",
+    "sinon": "^4.2.2"
   }
 }
