--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "dalisra-mongo-wrapper",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "description": "Simple mongodb wrapper",
   "main": "index.js",
   "scripts": {
     "test": "mocha --exit",
-    "coverage": "nyc --reporter=html mocha --exit"
+    "coverage": "nyc --reporter=html mocha --exit",
+    "cover": "nyc --reporter=html mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -22,13 +23,12 @@
   },
   "homepage": "https://github.com/Dalisra/mongo-wrapper#readme",
   "dependencies": {
-    "async": "^2.6.1",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "sinon": "^7.2.2"
+    "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
+    "sinon": "^7.5.0"
   }
 }
