--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dalisra-mongo-wrapper",
-    "version": "3.1.0",
+    "version": "3.1.1",
     "description": "Simple mongodb wrapper",
     "main": "index.js",
     "scripts": {
@@ -25,6 +25,9 @@
     "dependencies": {
         "mongodb": "^3.5.9"
     },
+    "files": [
+        "index.js"
+    ],
     "devDependencies": {
         "chai": "^4.2.0",
         "mocha": "^8.0.1",
