--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dalisra-mongo-wrapper",
-    "version": "3.1.1",
+    "version": "3.1.2",
     "description": "Simple mongodb wrapper",
     "main": "index.js",
     "scripts": {
@@ -29,9 +29,7 @@
         "index.js"
     ],
     "devDependencies": {
-        "chai": "^4.2.0",
         "mocha": "^8.0.1",
-        "nyc": "^15.1.0",
-        "sinon": "^9.0.2"
+        "nyc": "^15.1.0"
     }
 }
