--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dalisra-mongo-wrapper",
-    "version": "3.2.4",
+    "version": "4.0.0-beta",
     "description": "Simple mongodb wrapper",
     "main": "index.js",
     "scripts": {
@@ -22,14 +22,14 @@
         "url": "https://github.com/Dalisra/mongo-wrapper/issues"
     },
     "homepage": "https://github.com/Dalisra/mongo-wrapper#readme",
-    "dependencies": {
-        "mongodb": "^3.6.1"
-    },
     "files": [
         "index.js"
     ],
     "devDependencies": {
-        "mocha": "^8.1.3",
+        "mocha": "^9.0.2",
         "nyc": "^15.1.0"
+    },
+    "dependencies": {
+        "mongodb": "^4.0.0"
     }
 }
