--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dalisra-mongo-wrapper",
-    "version": "4.0.0-beta",
+    "version": "4.0.1",
     "description": "Simple mongodb wrapper",
     "main": "index.js",
     "scripts": {
@@ -30,6 +30,6 @@
         "nyc": "^15.1.0"
     },
     "dependencies": {
-        "mongodb": "^4.0.0"
+        "mongodb": "^4.1.0"
     }
 }
